Fixed font spacing how it works

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,8 +66,7 @@ h1,h2,h3,h4,h5,h6 {
     text-transform: capitalize;
 }
 p {
-	margin: 0;
-    margin-bottom: 24px;
+	margin: 18px 0;
 	color:#767f86;
 	font-size:14px;
     line-height: 1.8;
